02-base-infrastructure/bastian-host.tf
# Elastic IP for the Bastion Host
resource "aws_eip" "my_eip_for_bastion_host" {
  vpc = true

  tags = {
    Name    = "my_eip_for_bastion_host"
    Project = var.project_tag
  }
}

# Launch Template
resource "aws_launch_template" "my_launch_template_for_bastion_host" {
  name_prefix   = "bastion_host_"
  image_id      = "ami-0bd39c806c2335b95"
  instance_type = "t2.micro"
  key_name      = aws_key_pair.my_key.key_name
  vpc_security_group_ids = [aws_security_group.my_ssh_sg.id]
  iam_instance_profile {
    name = aws_iam_instance_profile.my_instance_profile.name
  }
  user_data     = <<-EOF
    #cloud-config
    runcmd:
      - aws ec2 associate-address --instance-id $(curl http://169.254.169.254/latest/meta-data/instance-id) --allocation-id ${aws_eip.my_eip_for_bastion_host.id} --allow-reassociation
    EOF
  
  tags = {
    Name    = "my_launch_template_for_bastion_host"
    Project = var.project_tag
  }
}

# Autoscaling Group
resource "aws_autoscaling_group" "my_asg_for_bastion_host" {
  vpc_zone_identifier = aws_subnet.my_public_subnets[*].id
  desired_capacity   = 1
  max_size           = 1
  min_size           = 1

  launch_template {
    id      = aws_launch_template.my_launch_template_for_bastion_host.id
    version = aws_launch_template.my_launch_template_for_bastion_host.latest_version
  }
}
