02-base-infrastructure/security-groups.tf
resource "aws_security_group" "my_ssh_sg" {
  name        = "my_ssh_sg"
  description = "Allow SSH"
  vpc_id      = aws_vpc.my_vpc.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "my_ssh_sg"
    Project = var.project_tag
  }
}
